GearsetPOC/force-app/main/default/objects/Credit_Card__c/Credit_Card__c.object-meta.xml
<CustomObject>
    <description>This is an object to store the credit card(s) information of a customer.</description>
    <label>Credit Card</label>
    <nameField>
        <label>Card Token</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>