GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Detail relationship with the customer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Cards</relationshipLabel>
    <relationshipName>Credit_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>