GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2__c</fullName>
    <label>Billing Address Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>