GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Billing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postcode__c</fullName>
    <label>Billing Postcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>