GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Region__c</fullName>
    <label>Billing Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>