GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Type of card like maestro, visa etc.</description>
    <label>Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>