GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <label>Cardholder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>