GearsetPOC/force-app/main/default/objects/Credit_Card__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Format is MM/YY</description>
    <label>Expiry Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>